Correcion de Colores con Relaión al Mockup

--- a/app/src/main/res/drawable/rounded_bottom_salidas.xml
+++ b/app/src/main/res/drawable/rounded_bottom_salidas.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle"
-    android:padding="10dp">
+    android:padding="10dp"
+    android:backgroundTint="#81179B"
+    >
 
     <corners
         android:topLeftRadius="15dp"
