--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,31 +17,72 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/btn_entradas"
-        android:layout_width="250dp"
+    <LinearLayout
+        android:id="@+id/linearButtons1"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
-        android:text="Entradas"
-        android:background="@drawable/rounded_bottom_entradas"
+        android:layout_marginStart="12dp"
+        android:layout_marginEnd="12dp"
+        android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/img_logoParking"
-        />
+        app:layout_constraintTop_toBottomOf="@id/img_logoParking">
 
-    <Button
-        android:id="@+id/btn_salidas"
-        android:layout_width="250dp"
+        <Button
+            android:id="@+id/btn_entradas"
+            android:layout_width="0px"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="75dp"
+            android:layout_marginEnd="5dp"
+            android:layout_weight="1"
+            android:background="@drawable/rounded_bottom_entradas"
+            android:text="Entradas"
+            />
+
+        <Button
+            android:id="@+id/btn_salidas"
+            android:layout_width="0px"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="75dp"
+            android:layout_weight="1"
+            android:background="@drawable/rounded_bottom_salidas"
+            android:text="Salidas" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/linearButtons2"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
-        android:text="Salidas"
-        android:background="@drawable/rounded_bottom_salidas"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginStart="12dp"
+        android:layout_marginEnd="12dp"
+        android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/btn_entradas"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toBottomOf="@id/linearButtons1">
 
+        <Button
+            android:id="@+id/btn_Usuarios"
+            android:layout_width="0px"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="75dp"
+            android:layout_marginEnd="5dp"
+            android:layout_weight="1"
+            android:background="@drawable/rounded_bottom_entradas"
+            android:text="Usuarios"
+            />
+
+        <Button
+            android:id="@+id/btn_Celdas"
+            android:layout_width="0px"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="75dp"
+            android:layout_weight="1"
+            android:background="@drawable/rounded_bottom_salidas"
+            android:text="Celdas" />
+
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
