Se agrega web service para conectar con bd MySQL en PhpMyAdmin

--- a/app/src/main/res/layout/activity_entradas.xml
+++ b/app/src/main/res/layout/activity_entradas.xml
@@ -11,7 +11,7 @@
         android:id="@+id/txt_encabezado"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Registra el Tipo de Vechulo y la placa  para realizar ingreso al parqueadero"
+        android:text="Registra el Tipo de Vehiculo y la placa  para realizar ingreso al parqueadero"
         android:textAlignment="center"
         android:textAllCaps="true"
         android:textStyle="bold"
@@ -27,11 +27,12 @@
         android:id="@+id/txt_tipoVehiculo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Tipo de Vehículo"
+        android:text="Selecciona el Tipo de Vehículo"
         android:layout_marginTop="35dp"
         android:layout_marginStart="25dp"
         android:textStyle="bold"
         android:textSize="20sp"
+        android:textAlignment="center"
         app:layout_constraintTop_toBottomOf="@id/txt_encabezado"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
